# Captcha

./: .gitattributes  .gitignore  AGENTS.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  STATISTICAL_LINK_EXP2_EXP3.md  SUBMISSION.md  VISUALIZATION_README.md  adaptive_artifacts.py  adaptive_attacker.py  adaptive_compare.py  adaptive_preflight.py  baseline_strengthening.py  calculate_cost.py  compress_few_shot_assets.py  dataset_scope_audit.py  exp2_to_exp3_predict.py  exp2_to_exp3_predictions_all.csv  exp2_to_exp3_predictions_nb.csv  expanded_dataset.py  expanded_dataset_phase042.py  experiments_helper.py  extended_dataset_manifest.py  failure_taxonomy.py  few_shot_answers.py  few_shot_examples.yaml  few_shot_image_compression_report.json  few_shot_image_manifest.json  limitations_summary.py  method.txt  paperdraft.tex  phase041_artifacts.py  phase042_artifacts.py  phase3_artifacts.py  phase4_artifacts.py  plot.ipynb  prepare_few_shot_examples.py  pricing.phase04_2.yaml  prompts_optimized.yaml  (+14 more)
.planning/: HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
baseline_sources/: phase4_baseline_sources.json
cognition/: __init__.py  adaptive_artifacts.py  adaptive_attacker.py  adaptive_compare.py  adaptive_preflight.py  baseline_strengthening.py  dataset_scope_audit.py  exp2_to_exp3_predict.py  expanded_dataset.py  expanded_dataset_phase042.py  experiments_helper.py  extended_dataset_manifest.py  failure_taxonomy.py  few_shot_answers.py  limitations_summary.py  phase041_artifacts.py  phase042_artifacts.py  phase3_artifacts.py  prepare_few_shot_examples.py  retry_calibration.py  revision_artifacts.py  revision_preflight.py  revision_provider_smoke.py  revision_secrets.py  run_eval.py  run_single_experiment.py  statistical_confidence.py  visualize_results.py
discuss/: 2025-11-05-exp2-performance-issue.md  2025-11-05-prompt-optimization-analysis.md
(+453 files in other folders)
