[project]
name = "cognition-revision-experiments"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "openai==2.6.1",
  "anthropic==0.72.0",
  "google-genai==1.39.1",
  "Pillow==10.0.1",
  "PyYAML==6.0.2",
  "tqdm==4.65.0",
  "numpy==1.24.3",
  "pandas==1.5.3",
  "matplotlib==3.7.1",
  "seaborn==0.12.2",
  "adjustText==1.3.0",
  "pydantic==2.13.4",
]

[dependency-groups]
dev = [
  "pytest==9.0.3",
  "ruff==0.15.13",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F"]
